[package]
name = "red-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.20"
tree-sitter-red = { git = "https://github.com/red/tree-sitter-red.git" }
tree-sitter-language = "0.1"
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
url = "2.4"
crossbeam-channel = "0.5"
