[package]
name = "red-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.25.10"
tree-sitter-red = { git = "https://github.com/red/tree-sitter-red.git" }
tree-sitter-language = "0.1.6"
lsp-server = "0.7"
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
crossbeam-channel = "0.5"
